app/home.module.scss
.mainContainer {
  background-color: var(--main-bg-color);
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  .wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: Arial, Helvetica, sans-serif;
    .mainHeading {
      color: var(--main-text-color);
      font-size: var(--base-6);
      span {
        display: inline-block;
        vertical-align: text-bottom;
      }
    }
    .button {
      padding: var(--base) var(--base-3);
      text-align: center;
      text-decoration: none;
      display: inline-block;
      font-size: var(--base-2);
      font-weight: bolder;
      font-family: Arial, Helvetica, sans-serif;
      margin: var(--base) 2px;
      transition-duration: 0.4s;
      cursor: pointer;
      background-color: var(--main-text-color);
      color: var(--primary-color);
      border: 2px solid var(--main-text-color);
      border-radius: var(--base-6);
      width: calc(var(--base-4) * 10);
      &:hover {
        background-color: var(--event-color);
        color: var(--main-text-color);
      }
    }
  }
}

